--- a/cat game/catGame.html
+++ b/cat game/catGame.html
@@ -1,5 +1,7 @@
 <canvas id="gameCanvas" width="1650" height="900" style="border: 3px solid black;"></canvas>
 
+<button type="button" id="restartButton" style="position:absolute; top:40%; left:35%; display:none; width:30%; height:20%; font-size:900%; background-color:white; border:none; border-radius: 15px;" > Restart </button>
+
 <script>
 	var sky = new Image();
 	sky.src = "sky.png";
@@ -70,13 +72,13 @@
 	var rockHeight = 256;
 	
 	var bushX = 600;	
-	var bushY = 620;
-	var bushWidth = 128;
-	var bushHeight = 128;
+	var bushY = 500;
+	var bushWidth = 240;
+	var bushHeight = 240;
 	
 	var gravity = 2;
 	var isGameRunning = true;
-	var distance = 0;
+	var time = 6000;
 	
 	var skycolour = "#060d29";
 	
@@ -111,18 +113,18 @@
 		//canvasContext.drawImage(rock, rockX, rockY, rockWidth, rockHeight);
 		canvasContext.drawImage(bush, bushX, bushY, bushWidth, bushHeight);
 		
-		canvasContext.fillStyle = "rgba(255,255,255,0.5)";
-		canvasContext.fillRect(1400, 10, 160, 60);
+		canvasContext.fillStyle = "rgba(255,255,255,1)";
+		canvasContext.fillRect(1185 , 10, 400, 60);
 	
 		
 		canvasContext.font = "60px Arial";
 		canvasContext.fillStyle = "black";
-		canvasContext.fillText(distance, 1400, 60);
+		canvasContext.fillText("Time Left: " + (Math.round(time/60)), 1200, 60);
 	}
 	
 	
 	function update(){
-		distance += 1;
+		time -= 1;
 		
 		firstGrassX -= 6;
 		secondGrassX -= 6;
@@ -141,7 +143,7 @@
 		}
 		
 		bushX -= 6;
-		if (bushX < -100){
+		if (bushX < -200){
 			bushX = 1600;
 		}
 		
@@ -154,12 +156,25 @@
 				catVertSpeed = 0;
 		}
 
+		if (time == -1){
+			isGameRunning = false;
+			document.getElementById("restartButton").style.display = "block";
+		}
 		
 		if ( detectCollision(catX, catY, catWidth, catHeight, bushX, bushY, bushWidth, bushHeight) ){
-			isGameRunning = false;
+			isGameRunning = false; 
+			document.getElementById("restartButton").style.display = "block";
 		}
 	}
     
+	document.getElementById("restartButton").addEventListener("click", restartGame);
+	function restartGame() {
+		isGameRunning = true;
+		time = 6000;
+		bushX = 1100;	
+		document.getElementById("restartButton").style.display = "none";
+	}
+	
 	
 	window.addEventListener('keyup',this.check,false); 
 		function check(e) {
@@ -183,6 +198,7 @@
 				distance = 0;
 				catX = 50;
 				bushX = 1100;
+				document.getElementById("restartButton").style.display = "none";
 			}
 		}
 
