--- a/cat game/catGame.html
+++ b/cat game/catGame.html
@@ -25,10 +25,24 @@
 			}
 			
 			#score {
-				font-family: myTextFont;
+				font-family: myHeadingFont;
 				color:white;
 				margin-top:20px;
-				font-size:500%;
+				font-size:400%;
+			}
+			
+			#pauseButton { 
+				width:75px; 
+				height:70px;
+				left:1580px;
+				top:20px;
+				position:absolute;
+				color:white;
+				font-size:400%;
+				background-color:rgba(0,0,0,0); 
+				border:none; 
+				border-radius:15px;
+				font-family: myHeadingFont;
 			}
 			
 			#time {
@@ -165,6 +179,8 @@
 	<body>
 		<canvas id="gameCanvas" width="1650" height="900" style="border: 3px solid black;"></canvas>
 		
+		<button type="button" id="pauseButton"> || </button>
+		
 		<div id="info"> 
 			<h1 id="score"> Score: </h1>
 		</div>
@@ -192,7 +208,7 @@
 				<button type="button" id="startButton"> Start! </button>
 			</div>
 		</div>
-		<img src="image.png" id="startImage" style="margin:11px; top:0; left:0; width:98.5%; height:96.75%; position:absolute;">
+		<img src="image.png" id="startImage" style="margin:13px; top:0; left:0; width:1650px; height:900px; position:absolute;">
 		
 	</body>
 </html>
@@ -360,81 +376,104 @@
 		
 		catX -= 0.25;
 		
-		
-		if (Math.round(score/5) > 300) {
+		if (Math.round(score/5)%200 == 0) {
 			score += 0.3;
-			firstGrassX -= 1;
-			secondGrassX -= 1;
-			treesX -= 1;
-			trees2X -= 1;
-			bushX -= 1;
-			rockX -= 1;
-			blockX -= 1;
-			coinX -= 1;
+			firstGrassX -= 0.1;
+			secondGrassX -= 0.1;
+			treesX -= 100;
+			trees2X -= 100;
+			bushX -= 0.1;
+			rockX -= 0.1;
+			blockX -= 0.1;
+			coinX -= 0.1;
 			catX -= 0.15
-		} else if (Math.round(score/5) > 600) {
+		}
+		/*
+		if (Math.round(score/5) < 200) {
 			score += 0.3;
-			firstGrassX -= 2;
-			secondGrassX -= 2;
-			treesX -= 2;
-			trees2X -= 2;
-			bushX -= 2;
-			rockX -= 2;
-			blockX -= 2;
-			coinX -= 2;
+			firstGrassX -= 0.1;
+			secondGrassX -= 0.1;
+			treesX -= 0.1;
+			trees2X -= 0.1;
+			bushX -= 0.1;
+			rockX -= 0.1;
+			blockX -= 0.1;
+			coinX -= 0.1;
 			catX -= 0.15
-		} else if (Math.round(score/5) > 900) {
+		} else if (Math.round(score/5) < 400) {
+			score += 0.3;
+			firstGrassX -= 0.2;
+			secondGrassX -= 0.2;
+			treesX -= 0.2;
+			trees2X -= 0.2;
+			bushX -= 0.2;
+			rockX -= 0.2;
+			blockX -= 0.2;
+			coinX -= 0.2;
+			catX -= 0.15
+		} else if (Math.round(score/5) < 600) {
 			score += 0.4;
-			firstGrassX -= 3;
-			secondGrassX -= 3;
-			treesX -= 3;
-			trees2X -= 3;
-			bushX -= 3;
-			rockX -= 3;
-			blockX -= 3;
-			coinX -= 3;
+			firstGrassX -= 0.3;
+			secondGrassX -= 0.3;
+			treesX -= 0.3;
+			trees2X -= 0.3;
+			bushX -= 0.3;
+			rockX -= 0.3;
+			blockX -= 0.3;
+			coinX -= 0.3;
 			catX -= 0.25
-		} else if (Math.round(score/5) > 1200) {
+		} else if (Math.round(score/5) < 800) {
 			score += 0.5;
-			firstGrassX -= 4;
-			secondGrassX -= 4;
-			treesX -= 4;
-			trees2X -= 4;
-			bushX -= 4;
-			rockX -= 4;
-			blockX -= 4;
-			coinX -= 4;
+			firstGrassX -= 0.4;
+			secondGrassX -= 0.4;
+			treesX -= 0.4;
+			trees2X -= 0.4;
+			bushX -= 0.4;
+			rockX -= 0.4;
+			blockX -= 0.4;
+			coinX -= 0.4;
 			catX -= 0.35
-		} else if (Math.round(score/5) > 1500) {
+		} else if (Math.round(score/5) < 1000) {
 			score += 0.6;
-			firstGrassX -= 5;
-			secondGrassX -= 5;
-			treesX -= 5;
-			trees2X -= 5;
-			bushX -= 5;
-			rockX -= 5;
-			blockX -= 5;
-			coinX -= 5;
+			firstGrassX -= 0.5;
+			secondGrassX -= 0.5;
+			treesX -= 0.5;
+			trees2X -= 0.5;
+			bushX -= 0.5;
+			rockX -= 0.5;
+			blockX -= 0.5;
+			coinX -= 0.5;
 			catX -= 0.35
-		} else if (Math.round(score/5) > 5000) {
-			score += 6;
-			firstGrassX -= 15;
-			secondGrassX -= 15;
-			treesX -= 15;
-			trees2X -= 15;
-			bushX -= 15;
-			rockX -= 15;
-			blockX -= 15;
-			coinX -= 15;
+		} else if (Math.round(score/5) < 1200) {
+			score += 0.7;
+			firstGrassX -= 0.6;
+			secondGrassX -= 0.6;
+			treesX -= 0.6;
+			trees2X -= 0.6;
+			bushX -= 0.6;
+			rockX -= 0.6;
+			blockX -= 0.6;
+			coinX -= 0.6;
+			catX -= 0.35
+		} else if (Math.round(score/5) < 1400) {
+			score += 0.8;
+			firstGrassX -= 0.7;
+			secondGrassX -= 0.7;
+			treesX -= 0.7;
+			trees2X -= 0.7;
+			bushX -= 0.7;
+			rockX -= 0.7;
+			blockX -= 0.7;
+			coinX -= 0.7;
 			catX -= 0.35
 		}
-		
-		if (firstGrassX < -3300){
-			firstGrassX = 3290;
+		*/
+		if (firstGrassX < -3000){
+			firstGrassX = 3000;
 		}
 		
-		if (secondGrassX < -3300){
-			secondGrassX = 3290;
+		if (secondGrassX < -3000){
+			secondGrassX = 3000;
 		}
 	
 		if (treesX < -1650){
@@ -446,7 +485,7 @@
 		}
 		
 		if (bushX < -200){
-			bushX = 1600;
+			bushX = rockX + Math.floor(Math.random() * 300)+ 700;
 		}
 		
 		if (rockX < -200){
@@ -519,6 +558,12 @@
 		}
 		
 	}
+	
+	document.getElementById("pauseButton").addEventListener("click", pauseGame);
+	function pauseGame() {
+		document.getElementById("startScreen").style.display = "block"
+		isGameRunning = false;
+	}
     
 	document.getElementById("restartButton").addEventListener("click", restartGame);
 	function restartGame() {
@@ -563,7 +608,8 @@
 					catVertSpeed += 0;
 					catX += 0;
 				}
-			} else if (code == 32) { 	
+			} 
+			else if (code == 32) { 	
 				if (catY >= 550) {
 					catVertSpeed = -100;
 					catX += 50;
@@ -572,12 +618,30 @@
 					catVertSpeed += 0;
 					catX += 0;
 				}
-			} else if (code == 39) { 	
+			} 
+			else if (code == 39) { 	
 				catX += 20;
-			} else if (code == 37) { 	
+			} 
+			else if (code == 37) { 	
 				catX -= 20;
+			} 
+			else if (code == 87) { 			
+				if (catY >= 550) {
+					catVertSpeed = -100;
+					catX += 50;
+					cat.src = "pixelCat.png"
+				} else if (catY < 300) {
+					catVertSpeed += 0;
+					catX += 0;
+				}
+			}  
+			else if (code == 68) { 	
+				catX += 20;
 			}
-		}
+			else if (code == 65) { 	
+				catX -= 20;
+			} 
+		} 
 		
 		window.addEventListener('keyup',this.restart,false); 
 		function restart(e) {
